// Vitest Snapshot v1

exports[`Generate routes > react - match snapshot > client code 1`] = `
"import React from \\"react\\";
const __pages_import_0__ = React.lazy(() => import(\\"/examples/next-style/src/pages/[...all].tsx\\"));
const __pages_import_1__ = React.lazy(() => import(\\"/examples/next-style/src/pages/about.tsx\\"));
const __pages_import_2__ = React.lazy(() => import(\\"/examples/next-style/src/pages/about/index.tsx\\"));
const __pages_import_3__ = React.lazy(() => import(\\"/examples/next-style/src/pages/components.tsx\\"));
import __pages_import_4__ from \\"/examples/next-style/src/pages/index.tsx\\";
const __pages_import_5__ = React.lazy(() => import(\\"/examples/next-style/src/pages/blog/[...all].tsx\\"));
const __pages_import_6__ = React.lazy(() => import(\\"/examples/next-style/src/pages/blog/[id].tsx\\"));
const __pages_import_7__ = React.lazy(() => import(\\"/examples/next-style/src/pages/blog/index.tsx\\"));
const __pages_import_8__ = React.lazy(() => import(\\"/examples/next-style/src/pages/blog/today/[...all].tsx\\"));
const __pages_import_9__ = React.lazy(() => import(\\"/examples/next-style/src/pages/blog/today/index.tsx\\"));

const routes = [{\\"caseSensitive\\":false,\\"path\\":\\"*\\",\\"element\\":React.createElement(__pages_import_0__)},{\\"caseSensitive\\":false,\\"path\\":\\"about\\",\\"element\\":React.createElement(__pages_import_1__),\\"children\\":[{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_2__),\\"index\\":true}]},{\\"caseSensitive\\":false,\\"path\\":\\"components\\",\\"element\\":React.createElement(__pages_import_3__)},{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_4__),\\"index\\":true},{\\"caseSensitive\\":false,\\"path\\":\\"blog\\",\\"children\\":[{\\"caseSensitive\\":false,\\"path\\":\\"*\\",\\"element\\":React.createElement(__pages_import_5__)},{\\"caseSensitive\\":false,\\"path\\":\\":id\\",\\"element\\":React.createElement(__pages_import_6__)},{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_7__),\\"index\\":true},{\\"caseSensitive\\":false,\\"path\\":\\"today\\",\\"children\\":[{\\"caseSensitive\\":false,\\"path\\":\\"*\\",\\"element\\":React.createElement(__pages_import_8__)},{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_9__),\\"index\\":true}]}]}];

export default routes;"
`;

exports[`Generate routes > react - match snapshot > routes 1`] = `
[
  {
    "caseSensitive": false,
    "element": "/examples/next-style/src/pages/[...all].tsx",
    "path": "*",
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/next-style/src/pages/about/index.tsx",
        "index": true,
      },
    ],
    "element": "/examples/next-style/src/pages/about.tsx",
    "path": "about",
  },
  {
    "caseSensitive": false,
    "element": "/examples/next-style/src/pages/components.tsx",
    "path": "components",
  },
  {
    "caseSensitive": false,
    "element": "/examples/next-style/src/pages/index.tsx",
    "index": true,
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/next-style/src/pages/blog/[...all].tsx",
        "path": "*",
      },
      {
        "caseSensitive": false,
        "element": "/examples/next-style/src/pages/blog/[id].tsx",
        "path": ":id",
      },
      {
        "caseSensitive": false,
        "element": "/examples/next-style/src/pages/blog/index.tsx",
        "index": true,
      },
      {
        "caseSensitive": false,
        "children": [
          {
            "caseSensitive": false,
            "element": "/examples/next-style/src/pages/blog/today/[...all].tsx",
            "path": "*",
          },
          {
            "caseSensitive": false,
            "element": "/examples/next-style/src/pages/blog/today/index.tsx",
            "index": true,
          },
        ],
        "path": "today",
      },
    ],
    "path": "blog",
  },
]
`;

exports[`Generate routes > routeStyle > nuxt style match snapshot > client code 1`] = `
"import React from \\"react\\";
const __pages_import_0__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/_.tsx\\"));
const __pages_import_1__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/about.tsx\\"));
const __pages_import_2__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/about/index.tsx\\"));
const __pages_import_3__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/components.tsx\\"));
import __pages_import_4__ from \\"/examples/nuxt-style/src/pages/index.tsx\\";
const __pages_import_5__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/blog/_.tsx\\"));
const __pages_import_6__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/blog/_id.tsx\\"));
const __pages_import_7__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/blog/index.tsx\\"));
const __pages_import_8__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/blog/today/_.tsx\\"));
const __pages_import_9__ = React.lazy(() => import(\\"/examples/nuxt-style/src/pages/blog/today/index.tsx\\"));

const routes = [{\\"caseSensitive\\":false,\\"path\\":\\"*\\",\\"element\\":React.createElement(__pages_import_0__)},{\\"caseSensitive\\":false,\\"path\\":\\"about\\",\\"element\\":React.createElement(__pages_import_1__),\\"children\\":[{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_2__),\\"index\\":true}]},{\\"caseSensitive\\":false,\\"path\\":\\"components\\",\\"element\\":React.createElement(__pages_import_3__)},{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_4__),\\"index\\":true},{\\"caseSensitive\\":false,\\"path\\":\\"blog\\",\\"children\\":[{\\"caseSensitive\\":false,\\"path\\":\\"*\\",\\"element\\":React.createElement(__pages_import_5__)},{\\"caseSensitive\\":false,\\"path\\":\\":id\\",\\"element\\":React.createElement(__pages_import_6__)},{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_7__),\\"index\\":true},{\\"caseSensitive\\":false,\\"path\\":\\"today\\",\\"children\\":[{\\"caseSensitive\\":false,\\"path\\":\\"*\\",\\"element\\":React.createElement(__pages_import_8__)},{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_9__),\\"index\\":true}]}]}];

export default routes;"
`;

exports[`Generate routes > routeStyle > nuxt style match snapshot > routes 1`] = `
[
  {
    "caseSensitive": false,
    "element": "/examples/nuxt-style/src/pages/_.tsx",
    "path": "*",
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/nuxt-style/src/pages/about/index.tsx",
        "index": true,
      },
    ],
    "element": "/examples/nuxt-style/src/pages/about.tsx",
    "path": "about",
  },
  {
    "caseSensitive": false,
    "element": "/examples/nuxt-style/src/pages/components.tsx",
    "path": "components",
  },
  {
    "caseSensitive": false,
    "element": "/examples/nuxt-style/src/pages/index.tsx",
    "index": true,
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/nuxt-style/src/pages/blog/_.tsx",
        "path": "*",
      },
      {
        "caseSensitive": false,
        "element": "/examples/nuxt-style/src/pages/blog/_id.tsx",
        "path": ":id",
      },
      {
        "caseSensitive": false,
        "element": "/examples/nuxt-style/src/pages/blog/index.tsx",
        "index": true,
      },
      {
        "caseSensitive": false,
        "children": [
          {
            "caseSensitive": false,
            "element": "/examples/nuxt-style/src/pages/blog/today/_.tsx",
            "path": "*",
          },
          {
            "caseSensitive": false,
            "element": "/examples/nuxt-style/src/pages/blog/today/index.tsx",
            "index": true,
          },
        ],
        "path": "today",
      },
    ],
    "path": "blog",
  },
]
`;

exports[`Generate routes > routeStyle > remix Style match snapshot > client code 1`] = `
"import React from \\"react\\";
const __pages_import_0__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/__marketing.tsx\\"));
const __pages_import_1__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/__marketing/product.tsx\\"));
const __pages_import_2__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/[sitemap.xml].tsx\\"));
const __pages_import_3__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/$.tsx\\"));
const __pages_import_4__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/about.tsx\\"));
const __pages_import_5__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/about/index.tsx\\"));
const __pages_import_6__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/blog.authors.tsx\\"));
const __pages_import_7__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/blog.tsx\\"));
const __pages_import_8__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/blog/$.tsx\\"));
const __pages_import_9__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/blog/$id.tsx\\"));
const __pages_import_10__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/blog/index.tsx\\"));
const __pages_import_11__ = React.lazy(() => import(\\"/examples/remix-style/src/pages/blog/today/index.tsx\\"));
import __pages_import_12__ from \\"/examples/remix-style/src/pages/index.tsx\\";

const routes = [{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_0__),\\"children\\":[{\\"caseSensitive\\":false,\\"path\\":\\"product\\",\\"element\\":React.createElement(__pages_import_1__)}]},{\\"caseSensitive\\":false,\\"path\\":\\"sitemap.xml\\",\\"element\\":React.createElement(__pages_import_2__)},{\\"caseSensitive\\":false,\\"path\\":\\"*\\",\\"element\\":React.createElement(__pages_import_3__)},{\\"caseSensitive\\":false,\\"path\\":\\"about\\",\\"element\\":React.createElement(__pages_import_4__),\\"children\\":[{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_5__),\\"index\\":true}]},{\\"caseSensitive\\":false,\\"path\\":\\"blog/authors\\",\\"element\\":React.createElement(__pages_import_6__)},{\\"caseSensitive\\":false,\\"path\\":\\"blog\\",\\"element\\":React.createElement(__pages_import_7__),\\"children\\":[{\\"caseSensitive\\":false,\\"path\\":\\"*\\",\\"element\\":React.createElement(__pages_import_8__)},{\\"caseSensitive\\":false,\\"path\\":\\":id\\",\\"element\\":React.createElement(__pages_import_9__)},{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_10__),\\"index\\":true},{\\"caseSensitive\\":false,\\"path\\":\\"today\\",\\"children\\":[{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_11__),\\"index\\":true}]}]},{\\"caseSensitive\\":false,\\"element\\":React.createElement(__pages_import_12__),\\"index\\":true}];

export default routes;"
`;

exports[`Generate routes > routeStyle > remix Style match snapshot > routes 1`] = `
[
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/__marketing/product.tsx",
        "path": "product",
      },
    ],
    "element": "/examples/remix-style/src/pages/__marketing.tsx",
    "path": undefined,
  },
  {
    "caseSensitive": false,
    "element": "/examples/remix-style/src/pages/[sitemap.xml].tsx",
    "path": "sitemap.xml",
  },
  {
    "caseSensitive": false,
    "element": "/examples/remix-style/src/pages/$.tsx",
    "path": "*",
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/about/index.tsx",
        "index": true,
      },
    ],
    "element": "/examples/remix-style/src/pages/about.tsx",
    "path": "about",
  },
  {
    "caseSensitive": false,
    "element": "/examples/remix-style/src/pages/blog.authors.tsx",
    "path": "blog/authors",
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/blog/$.tsx",
        "path": "*",
      },
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/blog/$id.tsx",
        "path": ":id",
      },
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/blog/index.tsx",
        "index": true,
      },
      {
        "caseSensitive": false,
        "children": [
          {
            "caseSensitive": false,
            "element": "/examples/remix-style/src/pages/blog/today/index.tsx",
            "index": true,
          },
        ],
        "path": "today",
      },
    ],
    "element": "/examples/remix-style/src/pages/blog.tsx",
    "path": "blog",
  },
  {
    "caseSensitive": false,
    "element": "/examples/remix-style/src/pages/index.tsx",
    "index": true,
  },
]
`;
